@@ -2,8 +2,23 @@ plugins {
     id 'java'
 }
 
-group 'io.jdbib'
-version '1.0-SNAPSHOT'
+java {
+    sourceCompatibility = JavaVersion.VERSION_14
+    targetCompatibility = JavaVersion.VERSION_14
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-preview"
+}
+
+group = 'io.jdbib'
+version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -11,8 +26,8 @@ repositories {
 
 dependencies {
     implementation 'org.apache.commons:commons-text:1.8'
-    compile 'org.mongodb:mongodb-driver-sync:4.0.3'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    implementation 'org.mongodb:mongodb-driver-sync:4.0.4'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
